test/library/standard/DateTime/timezoneAwarenessMismatch.4.good
timezoneAwarenessMismatch.chpl:49: error: both dateTimes must both be either naive or aware
